<resources>
    <string name="app_name">Onetachi</string>

    <!-- Signup -->
    <string name="sign_up_title">회원가입</string>
    <string name="sign_up_id">이메일</string>
    <string name="sign_up_name">이름</string>
    <string name="sign_up_regNum1">******</string>
    <string name="sign_up_regNum2">*******</string>
    <string name="regNumtilt">-</string>
    <string name="sign_up_applyBtn">회원가입</string>
    <string name="sign_up_cancelBtn">취소</string>

    <!-- Username -->
    <eat-comment />
    <string name="sign_in">Sign In</string>
    <string name="username">이메일</string>
    <string name="sign_in_explanation">For the purpose of demonstration, this app accepts any username.</string>
    <string name="next">로그인</string>
    <string name="signup">회원가입</string>

    <!-- Auth -->
    <eat-comment />
    <string name="welcome">Welcome, %s!</string>
    <string name="auth_explanation">For the purpose of demonstration, the password you type is ignored.</string>
    <string name="password">Password</string>
    <string name="cancelled">Cancelled</string>

    <!-- Home -->
    <string name="credentials_caption">Your registered credentials:</string>
    <string name="empty_credentials">You don\'t have any credentials.</string>
    <string name="reauth">Reauth</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete this credential?\n\n%s</string>

</resources>
