<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 Google Inc. All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.android.onetachi.ui.signup.SignupViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:text="@string/sign_up_title"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium_large"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.145"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_id"
                android:imeOptions="actionGo"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={viewModel.id}" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium_large"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_name"
                android:imeOptions="actionGo"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={viewModel.name}" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- regNum1 -->

        <!-- regNum2 -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_regNum1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium_large"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="171dp"
            android:layout_marginRight="171dp"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_regNum1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_regNum1"
                android:imeOptions="actionGo"
                android:inputType="number"
                android:maxLines="1"
                android:text="@={viewModel.regNum1}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_regNum2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium_large"
            android:layout_marginStart="170dp"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/container_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_regNum2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_up_regNum2"
                android:imeOptions="actionGo"
                android:inputType="number"
                android:maxLines="1"
                android:text="@={viewModel.regNum2}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:text="@string/regNumtilt"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_name" />

        <Button
            android:id="@+id/sign_up_applyBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="50dp"
            android:onClick="@{() -> viewModel.sendSignupForm()}"
            android:text="@string/sign_up_applyBtn"
            app:backgroundTint="#673AB7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sign_up_cancelBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_regNum1" />

        <Button
            android:id="@+id/sign_up_cancelBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="50dp"
            android:text="@string/sign_up_cancelBtn"
            app:backgroundTint="#A6A6A6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sign_up_applyBtn"
            app:layout_constraintTop_toBottomOf="@+id/container_regNum2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
